# src/docs/swagger_output.json
@@ -88,7 +88,7 @@
         }
       }
     },
-    "auth/me": {
+    "/auth/me": {
       "get": {
         "description": "",
         "responses": {
@@ -100,6 +100,33 @@
           },
           "403": {
             "description": "Forbidden"
+          }
+        }
+      }
+    },
+    "/auth/activation": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "code": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
